feat: initial setup

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,25 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>NahasBlog</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="author" content="Murillo Nahás" />
+    <meta
+      name="description"
+      content="Hi there! My name is Murillo Nahás, a Software Engineer from Brazil."
+    />
+    <meta
+      name="keywords"
+      content="sites, web, desenvolvimento, frontend, portfolio, development, backend, portfolio, blog"
+    />
+    <meta http-equiv="content-language" content="pt-br" />
+    <meta name="copyright" content="Murillo Nahás" />
+    <title>Nahas' Blog</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Nahas's Blog" />
+    <meta property="og:description" content="Nahas's Blog" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
