feat: some changes

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     />
     <meta http-equiv="content-language" content="pt-br" />
     <meta name="copyright" content="Murillo Nahás" />
-    <title>Nahas' Blog</title>
+    <title>Murillo Nahás | Blog</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Nahas's Blog" />
